samples/_failures_safe/1761480664_09865b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1680b96.c: In function ‘main’:
./samples/SAFE/__tmp_f1680b96.c:127:5: error: expected expression at end of input
  127 |     if (decompressed_size != input_size || memcmp(input_data, decompressed_data, input_size) !=
      |     ^~
./samples/SAFE/__tmp_f1680b96.c:127:5: error: expected declaration or statement at end of input
